--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "start": "npx parcel index.html",
+    "start": "npx parcel ./foodmood/index.html",
     "build": "npx parcel build index.html"
   },
   "keywords": [],
