--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "browserlist": "^1.0.1",
     "parcel": "^2.12.0",
-    "react": "^18.3.0"
+    "react": "^18.3.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "process": "^0.11.10",
